# cocktailor

./: .editorconfig  .gitignore  .gitlab-ci.yml  README.rst  local.yml  manage.py  production.yml  pyproject.toml  setup.cfg
.envs/.local/: .postgres
cocktailor/: conftest.py
cocktailor/cocktail/: admin.py  models.py
cocktailor/cocktail/api/: serializers.py  urls.py  views.py
cocktailor/cocktail/management/commands/: init_cocktails.py
cocktailor/cocktail/migrations/: 0001_initial.py  0002_auto_20200531_1027.py  0003_auto_20200531_2157.py
cocktailor/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
cocktailor/templates/: base.html
cocktailor/users/: admin.py  apps.py  urls.py
cocktailor/users/api/: serializers.py
cocktailor/users/tests/: test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_urls.py  test_views.py
compose/local/django/: Dockerfile
compose/production/django/: Dockerfile  entrypoint
compose/production/traefik/: traefik.yml
config/: api_router.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  index.rst
requirements/: production.txt
tests/: conftest.py  settings.py  utils.py
tests/functional/cocktail/: factories.py  test_available_ingredients.py
