[tool.poetry]
name = "cocktailor"
version = "0.1.0"
description = "Get Awsome Refreshing Cocktail Recipes!"
authors = ["Amir Khakshour <khakshour.amir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
argon2-cffi = "==19.2.0"
django = "==3.0.5"
django-allauth = "==0.41.0"
django-crispy-forms = "==1.9.0"
django-environ = "==0.4.5"
django-model-utils = "==4.0.0"
django-redis = "==4.11.0"
djangorestframework = "==3.11.0"
hiredis = "==1.0.1"
pillow = "==7.1.2"
python-slugify = "==4.0.0"
pytz = "==2020.1"
redis = "==3.5.0"
collectfast = "==2.1.0"
django-anymail = {version = "==7.1.0", extras = ["mailgun"]}
django-storages = {version = "==1.9.1", extras = ["google"]}
gunicorn = "==20.0.4"
psycopg2 = "==2.8.5"
drf-yasg = "^1.17.1"


[tool.poetry.dev-dependencies]
black = "==19.10b0"
coverage = "==5.1"
django-coverage-plugin = "==1.8.0"
django-debug-toolbar = "==2.2"
django-extensions = "==2.2.9"
django-stubs = "==1.5.0"
factory-boy = "==2.12.0"
flake8 = "==3.8.2"
flake8-isort = "==3.0.0"
ipdb = "==0.13.2"
mypy = "==0.770"
pre-commit = "==2.4.0"
pylint-django = "==2.0.15"
pytest = "==5.4.2"
pytest-django = "==3.9.0"
pytest-sugar = "==0.9.3"
sphinx = "==3.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
